# python-singletons

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .editorconfig  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
ci/: appveyor-download.py
ci/templates/: .travis.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
docs/reference/: index.rst  singletons.rst
src/singletons/: __init__.py  exceptions.py  factory.py  shared_module.py  singleton.py  utils.py
stubs/eventlet/: corolocal.pyi  patcher.pyi
stubs/gevent/: socket.pyi
tests/: shared.py  test_eventlet.py  test_factory.py  test_gevent.py  test_shared_module.py  test_singleton.py  test_singletons.py  test_utils.py
