[tool.black]
line-length = 100
target-version = ['py36']

[tool.poetry]
name = "python-singletons"
version = "0.2.5"
description = "Singleton metaclasses and singleton factories"
authors = ["James Roeder <jmaroeder@gmail.com>"]
license = "MIT"
packages = [
    { include = "singletons", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.6"
gevent = {version = "^1.4", optional = true}
eventlet = {version = "^0.25.1", optional = true}

[tool.poetry.dev-dependencies]
tox = "^3"
pytest = "^5.3.1"
flake8 = "^3.7.9"
wemake-python-styleguide = "^0.12.5"
black = "^19.10b0"
flake8-pytest = "^1.3"
flake8-pytest-style = "^0.1.3"
pytest-cov = "^2.8.1"
pytest-randomly = "^3.1.0"
pytest-testmon = "^1.0.1"
pytest-timeout = "^1.3.3"
xenon = "<=0.7"
pre-commit = "^1.20.0"
mypy = "^0.750"
yesqa = "^0.0.11"

[tool.poetry.extras]
eventlet = ["eventlet"]
gevent = ["gevent"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
